--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "doctrine/dbal": "^4.4",
         "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "stripe/stripe-php": "*"
+        "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
         "fakerphp/faker": "1.20",
